[package]
name = "git2-hyper"
version = "0.1.0"
authors = ["Henry Wu <2316687+henry40408@users.noreply.github.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/henry40408/git2-hyper"
documentation = "https://docs.rs/git2-hyper"
description = """
Backend for an HTTP transport in libgit2 powered by hyper.
Intended to be used with the git2 crate.
"""
edition = "2018"

[dependencies]
git2 = { version = "0.14.2", default-features = false }
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
hyper-tls = { version = "0.5", default-features = false, optional = true }
hyper-rustls = { version = "0.22", default-features = false, features = ["webpki-tokio"], optional = true }
log = "0.4"
tokio = { version = "1.3", features = ["rt-multi-thread"] }

[dev-dependencies]
civet = "0.11"
conduit = "0.8"
conduit-git-http-backend = "0.8"
tempfile = "3.0"
structopt = "0.3"

[features]
default = ["http2", "native"]
http2 = ["hyper/http2"]
native = ["hyper-tls"]
rustls = ["hyper-rustls"]

[[test]]
name = "all"
harness = false
